--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1,5 +1,3 @@
-
-
 * {
     margin: 0;
     padding: 0;
@@ -43,6 +41,9 @@ footer {
     text-align: center;
     position: absolute;
     width: 100%;
+    height: 7em;
+    bottom: 0;
+    left: 0;
 }
 
 p {
@@ -50,3 +51,8 @@ p {
     margin: 50px 0;
     font-size: 20px;
 }
+
+#piechart {
+    display: flex;
+}
+
